# lwz-thz

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml  validate.yml
custom_components/lwz_thz/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  descriptions.py  diagnostics.py  entity.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py  time.py  water_heater.py
custom_components/lwz_thz/thzprotocol/: __init__.py  cli.py  client.py  datatypes.py  errors.py  framing.py  mappings.py  programs.py  protocol.py  registers.py  timing.py  transport.py  writeparams.py
custom_components/lwz_thz/translations/: de.json
dashboard/: heizung.json  lwz-graphen.json  lwz-heizkurve-card.js
scripts/: thz_cli.py
tests/: conftest.py
tests/components/: conftest.py  test_climate_water_heater.py  test_config_flow.py  test_consistency.py  test_coordinator.py  test_number_select.py  test_options_flow.py  test_programs.py  test_setup.py
tests/protocol/: fake_transport.py  test_client.py  test_datatypes.py  test_framing.py  test_golden.py  test_programs.py  test_protocol.py  test_registers.py  test_writeparams.py
tests/protocol/fixtures/: telegrams.py
