[project]
name = "lwz-thz"
version = "0.1.0"
description = "Home Assistant custom integration for Stiebel Eltron LWZ / Tecalor THZ heat pumps (serial protocol)"
license = "GPL-2.0-only"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    # Needed to exercise the CLI against real hardware
    "pyserial>=3.5",
    "pyserial-asyncio-fast>=0.16",
    "pytest-homeassistant-custom-component>=0.13.195",
]

# Kein Build nötig — reines Test-/Tooling-Projekt (Integration wird als
# custom_component deployt, nicht als Wheel gebaut).
[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["custom_components/lwz_thz"]
# Referenzmaterial (FHEM-Original und verworfener erster Versuch) nicht linten
extend-exclude = ["reference"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # bugbear
    "UP",     # pyupgrade
    "SIM",    # simplify
    "RUF",    # ruff-specific
    "ASYNC",  # async pitfalls
]
ignore = [
    "E501",      # line length is handled by the formatter
    "ASYNC109",  # transport primitives take an explicit per-call timeout by design
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
